loopfor.LoopFor.scala.error
Compilation error:
LoopFor:7: error: '(' expected but identifier found.
if stepAmount!=0 {
   ^